RESOLVED FIXED267361
REGRESSION (266610@main): Catalyst WKWebView does not dispatch `contextmenu` on right click
https://bugs.webkit.org/show_bug.cgi?id=267361
Summary REGRESSION (266610@main): Catalyst WKWebView does not dispatch `contextmenu` ...
Wenson Hsieh
Reported 2024-01-10 12:51:49 PST
Attachments
Wenson Hsieh
Comment 1 2024-01-10 14:24:00 PST
EWS
Comment 2 2024-01-10 19:50:59 PST
Committed 272883@main (2b9a29c2569d): <https://commits.webkit.org/272883@main> Reviewed commits have been landed. Closing PR #22620 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.